--- a/client/ContagionCity/ContagionCity/ContagionCity.vcxproj
+++ b/client/ContagionCity/ContagionCity/ContagionCity.vcxproj
@@ -84,6 +84,9 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ContagionCity.h" />
+    <ClInclude Include="FbxManager.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="GameFramework.h" />
     <ClInclude Include="MathHelper.h" />
     <ClInclude Include="Mesh.h" />
@@ -99,6 +102,9 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="ContagionCity.cpp" />
+    <ClCompile Include="FBXManger.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="GameFramework.cpp" />
     <ClCompile Include="MathHelper.cpp" />
     <ClCompile Include="Mesh.cpp" />
