--- a/client/ContagionCity/ContagionCity/ContagionCity.vcxproj.filters
+++ b/client/ContagionCity/ContagionCity/ContagionCity.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="GameFramework.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="FbxManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -90,6 +93,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="GameFramework.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="FBXManger.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
