--- a/server/server/CoreLib/CoreLib.vcxproj
+++ b/server/server/CoreLib/CoreLib.vcxproj
@@ -74,14 +74,19 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="CircularQueue.h" />
+    <ClInclude Include="Log.h" />
+    <ClInclude Include="IniFile.h" />
     <ClInclude Include="Registry.h" />
     <ClInclude Include="Stream.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="IniFile.cpp" />
     <ClCompile Include="Registry.cpp" />
+    <ClCompile Include="CircularQueue.cpp" />
+    <ClCompile Include="Log.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
