라이브러리 업데이트 1.1
1. MemoryPool Class 추가 - 메모리풀을 사용하여 잦은 메모리 할당/해제로 발생하는 오버헤드 제거할 수 있다.
2. Crypt Class 추가 - 암호화
3. Service Class 추가 - 서비스 등록/해제 및 실행 클래스

--- a/server/server/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/server/server/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -80,7 +80,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="LibTest.cpp" />
+    <ClCompile Include="MemoryPoolTest.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="StreamLogTest.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="stream.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
