--- a/server/server/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/server/server/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="MemoryPoolTest.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="DumpTest.cpp" />
     <ClCompile Include="StreamLogTest.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
