--- a/server/server/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/server/server/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="MemoryPoolTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DumpTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
