라이브러리 업데이트 1.2 ( 네트워크 베이스 )
1. NetworkSession Class 추가 - 데이터 송/수신 클래스
2. PacketSession Class  추가 - NetworkSession 상속 클래스, 패킷을 만든다.
3. EventSelect Class 추가 - EventSelect 랩핑 클래스
4. Iocp Class 추가 - Iocp 랩핑 클래스

--- a/server/server/CoreLib/CoreLib.vcxproj.filters
+++ b/server/server/CoreLib/CoreLib.vcxproj.filters
@@ -63,6 +63,18 @@
     <ClInclude Include="Random.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NetworkSession.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PacketSession.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EventSelect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Iocp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -93,6 +105,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Random.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NetworkSession.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PacketSession.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EventSelect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Iocp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
