--- a/server/server/CoreLib/CoreLib.vcxproj
+++ b/server/server/CoreLib/CoreLib.vcxproj
@@ -45,7 +45,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;_CRT_NON_CONFORMING_SWPRINTFS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;_CRT_NON_CONFORMING_SWPRINTFS;_WINSOCK_DEPRECATED_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -77,6 +77,10 @@
     <ClInclude Include="CircularQueue.h" />
     <ClInclude Include="Crypt.h" />
     <ClInclude Include="CriticalSection.h" />
+    <ClInclude Include="EventSelect.h" />
+    <ClInclude Include="Iocp.h" />
+    <ClInclude Include="PacketSession.h" />
+    <ClInclude Include="NetworkSession.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="MultiThreadSync.h" />
     <ClInclude Include="MemoryLeak.h" />
@@ -91,7 +95,9 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="EventSelect.cpp" />
     <ClCompile Include="IniFile.cpp" />
+    <ClCompile Include="NetworkSession.cpp" />
     <ClCompile Include="Registry.cpp" />
     <ClCompile Include="CircularQueue.cpp" />
     <ClCompile Include="Log.cpp" />
@@ -99,6 +105,8 @@
     <ClCompile Include="Service.cpp" />
     <ClCompile Include="MiniDump.cpp" />
     <ClCompile Include="Random.cpp" />
+    <ClCompile Include="PacketSession.cpp" />
+    <ClCompile Include="Iocp.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
