게임서버 프로젝트 추가
1. ServerIocp Class 추가 - CIocp 상속 클래스, 가상함수 구현 및 Session 관리 클래스
2. ConnectedSession Class 추가 - CPacketSession 상속 클래스
3. ConnectedSessionManager Class 추가 - ConnectedSession 관리 클래스

--- a/server/server/CoreLib/CoreLib.vcxproj
+++ b/server/server/CoreLib/CoreLib.vcxproj
@@ -39,7 +39,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <OutDir>Debug\</OutDir>
+    <IntDir>Debug\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -78,6 +81,7 @@
     <ClInclude Include="Crypt.h" />
     <ClInclude Include="CriticalSection.h" />
     <ClInclude Include="EventSelect.h" />
+    <ClInclude Include="Global.h" />
     <ClInclude Include="Iocp.h" />
     <ClInclude Include="PacketSession.h" />
     <ClInclude Include="NetworkSession.h" />
