--- a/server/server/CoreLib/CoreLib.vcxproj.filters
+++ b/server/server/CoreLib/CoreLib.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="Iocp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Global.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
