게임서버업데이트 1.1
1. 게임 프로토콜 추가
2. 프로토콜 데이터 읽기/쓰기 함수 추가
3. Character Class 추가 - 캐릭터 정보 저장 클래스
4. ConnectedUser Class 추가 - PacketSession 상속 클래스, User ID, IP 등 정보 저장
5. ConnectedUserManger Class 추가 - ConnectedUser 관리 클래스
6. Room Class 추가

--- a/server/server/Server/Server.vcxproj.filters
+++ b/server/server/Server/Server.vcxproj.filters
@@ -33,6 +33,21 @@
     <ClInclude Include="ConnectedSessionManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TcpProtocol.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ConnectedUser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ConnectedUserManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Room.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -44,10 +59,16 @@
     <ClCompile Include="ServerIocp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ConnectedSession.cpp">
+    <ClCompile Include="Character.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ConnectedSessionManager.cpp">
+    <ClCompile Include="ConnectedUser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ConnectedUserManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Room.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
