--- a/server/server/Server/Server.vcxproj
+++ b/server/server/Server/Server.vcxproj
@@ -82,6 +82,11 @@
   <ItemGroup>
     <ClInclude Include="ConnectedSession.h" />
     <ClInclude Include="ConnectedSessionManager.h" />
+    <ClInclude Include="Character.h" />
+    <ClInclude Include="ConnectedUser.h" />
+    <ClInclude Include="ConnectedUserManager.h" />
+    <ClInclude Include="Room.h" />
+    <ClInclude Include="TcpProtocol.h" />
     <ClInclude Include="ServerIocp.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -89,8 +94,10 @@
   <ItemGroup>
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="ServerIocp.cpp" />
-    <ClCompile Include="ConnectedSession.cpp" />
-    <ClCompile Include="ConnectedSessionManager.cpp" />
+    <ClCompile Include="Character.cpp" />
+    <ClCompile Include="ConnectedUser.cpp" />
+    <ClCompile Include="ConnectedUserManager.cpp" />
+    <ClCompile Include="Room.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
