--- a/server/server/CoreLib/CoreLib.vcxproj
+++ b/server/server/CoreLib/CoreLib.vcxproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CircularQueue.h" />
+    <ClInclude Include="ClientSession.h" />
     <ClInclude Include="Crypt.h" />
     <ClInclude Include="CriticalSection.h" />
     <ClInclude Include="EventSelect.h" />
@@ -99,6 +100,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ClientSession.cpp" />
     <ClCompile Include="EventSelect.cpp" />
     <ClCompile Include="IniFile.cpp" />
     <ClCompile Include="NetworkSession.cpp" />
