--- a/server/server/CoreLib/CoreLib.vcxproj.filters
+++ b/server/server/CoreLib/CoreLib.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="Global.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ClientSession.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Iocp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ClientSession.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
