--- a/server/server/Server/Server.vcxproj
+++ b/server/server/Server/Server.vcxproj
@@ -86,19 +86,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ConnectedSession.cpp" />
-    <ClCompile Include="ConnectedSessionManager.cpp" />
+    <ClCompile Include="ConnectedUser.cpp" />
+    <ClCompile Include="ConnectedUserManager.cpp" />
     <ClCompile Include="ProcProtocol.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="ServerIocp.cpp" />
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ConnectedSession.h" />
-    <ClInclude Include="ConnectedSessionManager.h" />
+    <ClInclude Include="ConnectedUser.h" />
+    <ClInclude Include="ConnectedUserManager.h" />
+    <ClInclude Include="Character.h" />
     <ClInclude Include="Protocol.h" />
     <ClInclude Include="ServerIocp.h" />
     <ClInclude Include="stdafx.h" />
