--- a/server/server/Server/Server.vcxproj
+++ b/server/server/Server/Server.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="ServerIocp.cpp" />
     <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -101,6 +102,7 @@
     <ClInclude Include="ConnectedUser.h" />
     <ClInclude Include="ConnectedUserManager.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Protocol.h" />
     <ClInclude Include="ServerIocp.h" />
     <ClInclude Include="stdafx.h" />
