--- a/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -54,6 +54,8 @@
     <ClInclude Include="State_Wander.h" />
     <ClInclude Include="TargetProcess.h" />
     <ClInclude Include="ObjectStatus.h" />
+    <ClInclude Include="RequestToDB.h" />
+    <ClInclude Include="DBProcess.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{08FF5596-CE64-47F8-8961-CCF369C1D1A6}</ProjectGuid>
@@ -109,8 +111,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>$(LibraryPath)</LibraryPath>
-    <IncludePath>$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Sheunggyu\Desktop\ContagionCity\server\tbb44_20160128oss_win_0\tbb44_20160128oss\lib\ia32\vc14;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Sheunggyu\Desktop\ContagionCity\server\tbb44_20160128oss_win_0\tbb44_20160128oss\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -133,7 +135,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;tbb_debug.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
