--- a/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="소스 파일\Object">
       <UniqueIdentifier>{2d6db037-e5a8-4c8e-ae1e-333acf4e932b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="헤더 파일\DB">
+      <UniqueIdentifier>{1ea9db9d-3d22-4e5b-b5fc-d4beb2a7f92e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Server.cpp">
@@ -139,6 +142,12 @@
     </ClInclude>
     <ClInclude Include="ObjectStatus.h">
       <Filter>헤더 파일\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="RequestToDB.h">
+      <Filter>헤더 파일\DB</Filter>
+    </ClInclude>
+    <ClInclude Include="DBProcess.h">
+      <Filter>헤더 파일\DB</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
