--- a/server/Client/Win32Project1/Win32Project1.vcxproj
+++ b/server/Client/Win32Project1/Win32Project1.vcxproj
@@ -147,10 +147,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="Monster.cpp" />
+    <ClCompile Include="Object.cpp" />
+    <ClCompile Include="PacketDispatcher.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Monster.h" />
+    <ClInclude Include="Object.h" />
+    <ClInclude Include="PacketDispatcher.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Protocol.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="User.h" />
+    <ClInclude Include="ObjectStatus.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
